# npx-mcp-template

./: .gitignore  .npmrc  .oxfmtrc.json  CHANGELOG.md  LICENSE  README.md  biome.json  jd-publish.sh  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: autofix.yml  checks.yml  test.yaml
.husky/: pre-commit
.joycode/: prompt.json
src/: add.test.ts  add.ts  askAgent.ts  index.test.ts  index.ts
src_agent/: main.py  test_demo.py
