[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npx-mcp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.15"
dependencies = [
    "autopep8==2.3.2",
    "black==25.12.0",
    "flake8==7.3.0",
    "isort==7.0.0",
    "mypy==1.19.1",
    "oxygent==1.0.9",
    "pytest==9.0.2",
]

[project.scripts]
start-agent = "src_agent.main:entry_point"

[tool.hatch.build.targets.wheel]
only-include = ["src_agent/"]
