[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npx-mcp-agent"
version = "1.0.0"
description = "本地生活MCP模版项目的Python Agent服务"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["AI", "Agent", "MCP", "BDSH"]
dependencies = [
    "oxygent==1.0.10",
]

[project.optional-dependencies]
dev = [
    "autopep8==2.3.2",
    "black==25.12.0",
    "flake8==7.3.0",
    "isort==7.0.0",
    "mypy==1.19.1",
    "pyinstaller==6.17.0",
    "pytest==9.0.2",
]

[project.scripts]
start-agent = "src_agent.main:entry_point"

[tool.hatch.build.targets.wheel]
only-include = ["src_agent/"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src_agent"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
exclude = [
    "build/",
    "dist/",
    "^\\.git/",
    "^\\.venv/",
    "__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["src_agent"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]
